--- a/app/pom.xml
+++ b/app/pom.xml
@@ -21,6 +21,11 @@
   <dependencies>
     <dependency>
       <groupId>com.thewheel.sawatu</groupId>
+      <artifactId>admin</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.thewheel.sawatu</groupId>
       <artifactId>api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
