--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -7,7 +7,6 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.thewheel.sawatu</groupId>
   <artifactId>shared</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -22,8 +21,7 @@
   <dependencies>
     <dependency>
       <groupId>com.thewheel.sawatu</groupId>
-      <artifactId>database</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <artifactId>basic</artifactId>
     </dependency>
   </dependencies>
 
